--- a/author.yaml
+++ b/author.yaml
@@ -1,4 +1,4 @@
 author:
-  firstname: "YOUR"
-  lastname: "NAME"
-  email: "YOURNAME@example.com"
+  firstname: "JAYANTH"
+  lastname: "VODNALA"
+  email: "jvodnala@mail.yu.edu"
